--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
 
 <body>
   <div class="container">
+    <div class="weather-app">
     <form class="top-form submit-form" id="search-form">
       <div class="mb-1 city-name">
         <div class="row">
@@ -91,13 +92,16 @@
     </div>
   </div>
 
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
-    crossorigin="anonymous"></script>
+  
+    <footer>Designed by Sheba<br>
+</footer>
+
+<a href="https://github.com/Sheba-Ayinzabyonna/Weather_Api" target="_blank">Source Code</a>
+
+</div>
+
+</div>
   <script src="/src/index.js"></script>
 </body>
-<footer>Designed by Sheba<br>
-<a href= target="_blank">Github Repository</a></footer>
-</div>
 
 </html>
