--- a/index.html
+++ b/index.html
@@ -67,7 +67,9 @@
           </div>
         </div>
         <small>
-          <a href="https://github.com/Sheba-Ayinzabyonna/Week7" target="_blank"
+          <a
+            href="https://github.com/Sheba-Ayinzabyonna/Weather_Api"
+            target="_blank"
             >Source code</a
           >
         </small>
