--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <div class="weather-app">
           <form id="search-form" class="mb-3">
             <div class="row">
-              <div class="col-9">
+              <div class="col-6">
                 <input
                   type="search"
                   placeholder="Type a city..."
@@ -33,6 +33,13 @@
                 <input
                   type="submit"
                   value="Search"
+                  class="btn btn-primary w-100"
+                />
+              </div>
+              <div class="col-3">
+                <input
+                  type="submit"
+                  value="Current"
                   class="btn btn-primary w-100"
                 />
               </div>
