--- a/index.html
+++ b/index.html
@@ -37,11 +37,19 @@
                 />
               </div>
               <div class="col-3">
-                <input
+                <button
                   type="submit"
                   value="Current"
-                  class="btn btn-primary w-100"
-                />
+                  class="form-control btn btn-success"
+                  id="current_button"
+                >
+                  Current
+                </button>
+                <!-- <input
+                  type="submit"
+                  value="Current"
+                  class="btn btn-primary w-100 current_button"
+                /> -->
               </div>
             </div>
           </form>
@@ -74,6 +82,7 @@
           </div>
         </div>
         <small>
+          <footer>Designed by Sheba<br /></footer>
           <a
             href="https://github.com/Sheba-Ayinzabyonna/Weather_Api"
             target="_blank"
