--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
           </div>
         </div>
         <small>
-          <footer>Designed by Sheba<br /></footer>
+          <footer>Designed by Sheba</footer>
           <a
             href="https://github.com/Sheba-Ayinzabyonna/Weather_Api"
             target="_blank"
