--- a/index.html
+++ b/index.html
@@ -82,12 +82,12 @@
           </div>
         </div>
         <small>
-          <footer>Designed by Sheba</footer>
           <a
             href="https://github.com/Sheba-Ayinzabyonna/Weather_Api"
             target="_blank"
             >Source code</a
           >
+          Designed by Sheba
         </small>
       </div>
     </div>
