--- a/index.html
+++ b/index.html
@@ -45,11 +45,6 @@
                 >
                   Current
                 </button>
-                <!-- <input
-                  type="submit"
-                  value="Current"
-                  class="btn btn-primary w-100 current_button"
-                /> -->
               </div>
             </div>
           </form>
@@ -78,6 +73,51 @@
                 <li>Humidity: <span id="humidity"></span>%</li>
                 <li>Wind: <span id="wind"></span>km/hr</li>
               </ul>
+            </div>
+          </div>
+
+          <div class="container text-center">
+            <div class="row row-temp">
+              <div class="col col-mon">
+                <img
+                  src="https://creazilla-store.fra1.digitaloceanspaces.com/emojis/56952/sun-behind-small-cloud-emoji-clipart-xl.png"
+                  class="img-mon"
+                />
+                <br />20&degC<br />
+                Mon
+              </div>
+              <div class="col col-mon">
+                <img
+                  src="https://creazilla-store.fra1.digitaloceanspaces.com/cliparts/1723080/sun-clipart-md.png"
+                  class="img-mon"
+                />
+                <br />25&degC<br />
+                Tue
+              </div>
+              <div class="col col-mon">
+                <img
+                  src="https://creazilla-store.fra1.digitaloceanspaces.com/emojis/42639/sun-behind-large-cloud-emoji-clipart-xl.png"
+                  class="img-mon"
+                />
+                <br />20&degC<br />
+                Wed
+              </div>
+              <div class="col col-mon">
+                <img
+                  src="https://creazilla-store.fra1.digitaloceanspaces.com/emojis/57309/sun-behind-cloud-emoji-clipart-md.png"
+                  class="img-mon"
+                />
+                <br />19&degC<br />
+                Thur
+              </div>
+              <div class="col col-mon">
+                <img
+                  src="https://creazilla-store.fra1.digitaloceanspaces.com/emojis/46281/sun-behind-rain-cloud-emoji-clipart-xl.png"
+                  class="img-mon"
+                />
+                <br />9&degC<br />
+                Fri
+              </div>
             </div>
           </div>
         </div>
